기능 중심 + 계층형 구조형으로 정리